--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Yuheng Chen Homepage"
 title_separator          : "-"
 name                     : &name "Yuheng Chen"
 description              : &description "personal description"
-url                      : https://ChenYuHengSJTU.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://AliothChen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ChenYuHengSJTU/ChenYuHengSJTU.github.io"
+repository               : "AliothChen/AliothChen.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -42,7 +42,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "ChenYuHengSJTU"
+  github           : "AliothChen"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
