--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "avatar.png"
   name             : "Yuheng Chen"
   # pronouns         : "he/his" # example: "she/her"  
-  bio              : "Junior student at Shanghai Jiao Tong University"
+  bio              : "PhD. student at Shanghai Jiao Tong University"
   location         : "Shanghai China"
   employer         : "Shanghai Jiao Tong Univ."
-  uri              : # URL
   email            : "cyh627@sjtu.edu.cn" 
+  # uri              : # URL
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
