--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yuheng Chen (陈昱衡)"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/aliothchen_avatar.jpg"
   bio              : "Shanghai Jiao Tong University"
   location         : "Shanghai, China"
   employer         :
