--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yuheng Chen"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+description              : "First-year PhD. student at Shanghai Jiao Tong University"
 repository               : "AliothChen/AliothChen.github.io"
 google_scholar_stats_use_cdn : true
 
