1) modify about.md

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yuheng Chen"
-description              : "First-year PhD. student at Shanghai Jiao Tong University"
+description              : "First-year Ph.D. student at Shanghai Jiao Tong University"
 repository               : "AliothChen/AliothChen.github.io"
 google_scholar_stats_use_cdn : true
 
